--- a/.travis.yml
+++ b/.travis.yml
@@ -15,18 +15,19 @@ env:
    - ''  # main tests
 
 before_install:
-  - pip install https://github.com/openwisp/django-ipam/archive/master.zip
+  - pip install -e git+https://github.com/openwisp/django-ipam#egg=django-ipam
   - pip install --no-cache-dir -U -r requirements-test.txt
   - ./runflake8
   - ./runisort
 
 install:
-  - pip3 install "django>=2.0,<2.1"
+  - pip install "django>=2.0,<2.1"
   - python setup.py -q develop
 
 # command to run tests, e.g. python setup.py test
 script:
   - coverage run --source=openwisp_ipam runtests.py
+  - if [[ $TRAVIS_PYTHON_VERSION == 3.5 ]]; then ./tests/manage.py makemigrations openwisp_ipam --dry-run | grep "No changes detected"; fi
 
 after_success:
   - coveralls
