--- a/.travis.yml
+++ b/.travis.yml
@@ -1,33 +1,44 @@
 language: python
 sudo: false
-
 cache: pip
 
 python:
   - "3.5"
+  - "2.7"
+
+env:
+  - DJANGO="django>=1.11,<1.12"
+  - DJANGO="django>=2.0,<2.1"
+  - DJANGO="https://www.djangoproject.com/download/2.1rc1/tarball/"
+
+matrix:
+  exclude:
+   - python: "2.7"
+     env: DJANGO="django>=2.0,<2.1"
+   - python: "2.7"
+     env: DJANGO="https://www.djangoproject.com/download/2.1rc1/tarball/"
 
 branches:
   only:
     - master
 
-env:
-  matrix:
-   - ''  # main tests
-
 before_install:
-  - pip install -e git+https://github.com/openwisp/django-ipam#egg=django-ipam
   - pip install --no-cache-dir -U -r requirements-test.txt
   - ./runflake8
-  - ./runisort
+  - # TODO: remove after openwisp-utils > 0.2 is released
+  - pip install https://github.com/openwisp/openwisp-utils/tarball/master#egg=openwisp_utils --upgrade
+  - ./runcheckmigration
+  - if [[ $TRAVIS_PYTHON_VERSION == 3* ]]; then ./runisort; fi
 
+# command to install requirements
 install:
-  - pip install "django>=2.0,<2.1"
+  - pip install $DJANGO
   - python setup.py -q develop
 
 # command to run tests, e.g. python setup.py test
 script:
-  - coverage run --source=openwisp_ipam runtests.py
-  - if [[ $TRAVIS_PYTHON_VERSION == 3.5 ]]; then ./tests/manage.py makemigrations openwisp_ipam --dry-run | grep "No changes detected"; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == 3* ]]; then ./tests/manage.py makemigrations openwisp_users --dry-run | grep "No changes detected"; fi
+  - coverage run --source=openwisp_users runtests.py
 
 after_success:
-  - coveralls
+  coveralls
