[qa] Cleanup runflake8 and runisort & add commit check #13
Fixes #13
Fixes #14

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,8 @@ exclude = *.egg-info,
           ./tests/*settings*.py,
           docs/*
 max-line-length = 110
+# W605: invalid escape sequence
+ignore = W605
 
 [metadata]
 license-file = LICENSE
