--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,6 @@ env:
 before_install:
   - pip install -e git+https://github.com/openwisp/django-ipam#egg=django-ipam
   - pip install --no-cache-dir -U -r requirements-test.txt
-  - openwisp-utils-qa-checks --migration-path ./openwisp_ipam/migrations/
 
 install:
   - pip install "django>=2.0,<2.1"
@@ -27,7 +26,10 @@ install:
 # command to run tests, e.g. python setup.py test
 script:
   - coverage run --source=openwisp_ipam runtests.py
-  - if [[ $TRAVIS_PYTHON_VERSION == 3.5 ]]; then ./tests/manage.py makemigrations openwisp_ipam --dry-run | grep "No changes detected"; fi
+  - >
+    openwisp-utils-qa-checks \
+        --migration-path ./openwisp_ipam/migrations/ \
+        --migration-module openwisp_ipam
 
 after_success:
   - coveralls
