--- a/.travis.yml
+++ b/.travis.yml
@@ -5,22 +5,23 @@ dist: bionic
 cache: pip
 
 python:
-  - "3.5"
+  - "3.6"
+  - "3.7"
 
 branches:
   only:
     - master
 
 env:
-  matrix:
-   - ''  # main tests
+  - DJANGO="django>=2.2,<2.3"
+  - DJANGO="django>=3.0,<3.1"
 
 before_install:
   - pip install -e git+https://github.com/openwisp/django-ipam#egg=django-ipam
   - pip install --no-cache-dir -U -r requirements-test.txt
 
 install:
-  - pip install "django>=2.0,<2.1"
+  - pip install $DJANGO
   - python setup.py -q develop
 
 # command to run tests, e.g. python setup.py test
