--- a/.travis.yml
+++ b/.travis.yml
@@ -17,20 +17,16 @@ env:
   - DJANGO="django>=3.0,<3.1"
 
 before_install:
-  - pip install -e git+https://github.com/openwisp/django-ipam#egg=django-ipam
   - pip install --no-cache-dir -U -r requirements-test.txt
 
 install:
   - pip install $DJANGO
   - python setup.py -q develop
 
-# command to run tests, e.g. python setup.py test
 script:
+  - ./run-qa-checks
   - coverage run --source=openwisp_ipam runtests.py
-  - >
-    openwisp-utils-qa-checks \
-        --migration-path ./openwisp_ipam/migrations/ \
-        --migration-module openwisp_ipam
+  - SAMPLE_APP=1 ./runtests.py
 
 after_success:
   - coveralls
