--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 openwisp-users~=0.2.0
 openwisp-utils~=0.4.0
 django>=2.2,<3.1
-swapper>=1.1.0
 djangorestframework>=3.7,<3.12
-xlrd>=1.1.0
+swapper~=1.1
+xlrd~=1.1
