[ci] Minor improvements + openwisp-utils update

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,9 +4,12 @@ exclude = *.egg-info,
           *migrations*,
           ./tests/*settings*.py,
           docs/*
-max-line-length = 110
+# W503: line break before or after operator
+# W504: line break after or after operator
 # W605: invalid escape sequence
-ignore = W605
+# E203: not PEP 8 compliant rule
+ignore = W605, W503, W504, E203
+max-line-length = 88
 
 [metadata]
 license-file = LICENSE
@@ -15,10 +18,13 @@ license-file = LICENSE
 universal = 1
 
 [isort]
-line_length = 109
-skip = migrations
-combine_as_imports = true
-default_section = THIRDPARTY
-include_trailing_comma = true
-multi_line_output = 5
-not_skip = __init__.py
+not_skip=__init__.py
+skip=migrations
+combine_as_imports=true
+default_section=THIRDPARTY
+recursive=1
+line_length=88
+multi_line_output=3
+use_parentheses=True
+include_trailing_comma=True
+force_grid_wrap=0
