--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 exclude = *.egg-info,
           .git,
-          *migrations/0*,,
+          *migrations/0*,
           ./tests/*settings*.py,
           docs/*
 # W503: line break before or after operator
