--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,11 @@ python:
   - "3.6"
   - "3.7"
 
+notifications:
+  # will post a summary as comment on github in case of failure
+  webhooks: https://www.travisbuddy.com/
+  on_success: never
+
 branches:
   only:
     - master
