--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,9 @@ branches:
     - master
 
 env:
-  - DJANGO="django>=2.2,<2.3"
-  - DJANGO="django>=3.0,<3.1"
+  - DJANGO="django~=2.2"
+  - DJANGO="django~=3.0"
+  - DJANGO="django~=3.1"
 
 before_install:
   - pip install --no-cache-dir -U -r requirements-test.txt
