--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 openwisp-users~=0.4.0
-openwisp-utils~=0.6.0
-django>=2.2,<3.1
-djangorestframework>=3.7,<3.12
+openwisp-utils[rest]~=0.6.0
+django>=2.2,<3.2
 swapper~=1.1
 xlrd~=1.1
