--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-openwisp-users~=0.5.1
+# TODO: change this when next version of openwisp_users is released
+openwisp-users @ https://github.com/purhan/openwisp-users/tarball/issues/210-add-filter-mixins
 openwisp-utils[rest]~=0.7.2
 django>=2.2,<3.2
 swapper~=1.1
