[deps] Fixed dependencies pinning

--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,3 +1,4 @@
 coveralls
 django-extensions>=2.0.7
-openwisp-utils[qa]
+# TODO: change this when next version of openwisp_utils is released
+openwisp-utils[qa] @ https://github.com/openwisp/openwisp-utils/tarball/master
