[deps!] Upgraded Django and dropped support for Python 3.6 #117
- Dropped support for Python 3.6
- Added support for Django 3.2 and Django 4.0
- Replaced xlrd with openpyxl
- Bumped django-reversion~=4.0.1

Closes #96
Closes #102
Closes #120
Closes #117

**Backward incompatible change**: Subnets with /32 prefixlen
can provision an IP address same as the network address.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@
 openwisp-users @ https://github.com/openwisp/openwisp-users/tarball/master
 # TODO: change this when next version of openwisp_utils is released
 openwisp-utils[rest] @ https://github.com/openwisp/openwisp-utils/tarball/master
-django>=3.0.0,<3.2.0
-xlrd~=1.1.0
-django-reversion~=3.0.8
+django>=3.0.0,<4.1.0
+openpyxl~=3.0.9
+django-reversion~=4.0.1
