--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,11 +18,18 @@ jobs:
       fail-fast: false
       matrix:
         python-version:
-          - 3.6
           - 3.7
+          - 3.8
+          - 3.9
         django-version:
           - django~=3.0.0
           - django~=3.1.0
+          - django~=3.2.0
+        include:
+          - django-version: django~=4.0.0
+            python-version: 3.9
+          - django-version: django~=4.0.0
+            python-version: 3.8
 
     steps:
       - uses: actions/checkout@v2
@@ -37,11 +44,12 @@ jobs:
       - name: Install python dependencies
         run: |
           pip install -U pip wheel setuptools
-          pip install ${{ matrix.django-version }}
           pip install -U -r requirements-test.txt
 
       - name: Install openwisp-ipam
-        run: pip install -e .
+        run: |
+          pip install -U -e .
+          pip install ${{ matrix.django-version }}
 
       - name: Install jslint
         run: sudo npm install -g jslint stylelint
