--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-# TODO: change this when next version of openwisp_users is released
-openwisp-users @ https://github.com/openwisp/openwisp-users/tarball/master
-# TODO: change this when next version of openwisp_utils is released
-openwisp-utils[rest] @ https://github.com/openwisp/openwisp-utils/tarball/master
+openwisp-users~=1.0.0
+openwisp-utils[rest]~=1.0.1
 django>=3.0.0,<4.1.0
 openpyxl~=3.0.9
 django-reversion~=4.0.1
