--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,4 +1,3 @@
 coveralls
 django-extensions>=2.0.7
-# TODO: change this when next version of openwisp_utils is released
-openwisp-utils[qa] @ https://github.com/openwisp/openwisp-utils/tarball/master
+openwisp-utils[qa]~=1.0.1
