--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,3 +1,3 @@
 coveralls
 django-extensions>=2.0.7
-openwisp-utils[qa]~=1.0.1
+openwisp-utils[qa] @ https://github.com/openwisp/openwisp-utils/tarball/master
