--- a/.coveragerc
+++ b/.coveragerc
@@ -5,3 +5,6 @@ omit =
     /*/__init__.py
     /setup.py
     /*/migrations/*
+source = openwisp_ipam
+parallel = true
+concurrency = multiprocessing
