--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,9 +56,9 @@ jobs:
 
       - name: Tests
         run: |
-          coverage run --source=openwisp_ipam runtests.py
-          # SAMPLE tests do not influence coverage, so we can speed up tests with --parallel
-          SAMPLE_APP=1 ./runtests.py --parallel --keepdb
+          coverage run ./runtests.py --parallel
+          SAMPLE_APP=1 coverage run ./runtests.py --parallel
+          coverage combine
 
       - name: Upload Coverage
         run: coveralls --service=github
