--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 openwisp-users @ https://github.com/openwisp/openwisp-users/tarball/master
-openwisp-utils[rest] @ https://github.com/openwisp/openwisp-utils/tarball/master
+openwisp-utils[rest]~=1.1.0
 django-reversion~=5.0.12
 openpyxl~=3.1.5
