--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-openwisp-users~=1.1.0
-openwisp-utils[rest]~=1.1.1
+openwisp-users @ https://github.com/openwisp/openwisp-users/tarball/1.2
+openwisp-utils[rest] @ https://github.com/openwisp/openwisp-utils/tarball/1.2
 django-reversion~=5.1.0
 openpyxl~=3.1.5
