--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,8 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.sha }}
-
+      
+      # Caches downloaded .deb packages to speed up future installations
       - name: Cache APT packages
         uses: actions/cache@v4
         with:
@@ -54,7 +55,8 @@ jobs:
           key: apt-${{ runner.os }}-${{ hashFiles('.github/workflows/ci.yml') }}
           restore-keys: |
             apt-${{ runner.os }}-
-        
+
+      # Disables man-db auto-update to prevent delays during package installation  
       - name: Disable man page auto-update
         run: |
           echo 'set man-db/auto-update false' | sudo debconf-communicate >/dev/null
