--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-openwisp-users~=1.2.0
-openwisp-utils[rest]~=1.2.0
+openwisp-users @ https://github.com/openwisp/openwisp-users/archive/refs/heads/1.3.tar.gz
+openwisp-utils[rest] @ https://github.com/openwisp/openwisp-utils/archive/refs/heads/1.3.tar.gz
 django-reversion~=6.0.0
 openpyxl~=3.1.5
